--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
 	<div class="menu__field">
 		<div id="cardWrapper" class="container">
-			<div class="menu__item">
+			<!-- <div class="menu__item">
 				<img src="img/tabs/elite.jpg" alt="elite">
 				<h3 class="menu__item-subtitle">Меню “Премиум”</h3>
 				<div class="menu__item-descr">В меню “Премиум” мы используем не только красивый дизайн упаковки, но и
@@ -207,8 +207,8 @@
 					<div class="menu__item-cost">Цена:</div>
 					<div class="menu__item-total"><span>550</span> грн/день</div>
 				</div>
-			</div>
-			<div class="menu__item">
+			</div> -->
+			<!-- <div class="menu__item">
 				<img src="img/tabs/post.jpg" alt="post">
 				<h3 class="menu__item-subtitle">Меню "Постное"</h3>
 				<div class="menu__item-descr">Меню “Постное” - это тщательный подбор ингредиентов: полное отсутствие
@@ -219,7 +219,7 @@
 				<div class="menu__item-price">
 					<div class="menu__item-cost">Цена:</div>
 					<div class="menu__item-total"><span>430</span> грн/день</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
